refactor: simplify runtime invariant ownership